--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios-oauth-client": "^1.3.0",
     "axios-token-interceptor": "^0.2.0",
     "font-awesome": "^4.7.0",
+    "keycloak-js": "^10.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -23,7 +24,7 @@
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start -p 8002",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
