--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-moment": "^0.9.7",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "recharts": "^1.8.5",
     "styled-components": "^5.1.0",
     "typeface-roboto": "0.0.75"
