--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
@@ -19,6 +19,7 @@
     "axios-token-interceptor": "^0.2.0",
     "font-awesome": "^4.7.0",
     "keycloak-js": "^10.0.1",
+    "material-table": "^1.66.0",
     "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
